# sudoku-residual

./: .gitignore  CLAUDE.md  Makefile  README.md  activation_patching.ipynb  activations.py  analyze_steps.py  brier_degradation.ipynb  check_uniqueness.py  collect_activations.py  common.py  data.py  default_experiments.py  evaluate.py  experiment_config.py  head_features.py  model.py  plot.py  probes.py  pyproject.toml  run_eval.py  run_probes.py  run_training.py  solver.c  solver.py  tmp_plot_steps.py  training-loop.ipynb  training.py  transformer.py  visualize.py
jax_backend/: evaluate.py  training.py  transformer.py
notebooks/: activation_patching_substructure.ipynb  head_dla.ipynb  logit_lens_unembedding_viewer.ipynb  mse_cell_candidate_degradation.ipynb  mse_structure_degradation.ipynb  probe_prediction_viewers.ipynb  structure_probe_viewer.ipynb
plots/: run_figures.sh
plots/scripts/: fig_ablation_head_substructure_suppression.py  fig_ablation_last_mlp_ns_neurons.py  fig_ablation_structure_present_patch.py  fig_head_attention_cells.py  fig_head_circuit.py  fig_head_dla_cell.py  fig_head_dla_substructure.py  (+8 more)
scripts/: analyze_activation_shift.py  analyze_steps.py  collect_activations.py  logit_shift_decomposition.py  plot.py  probe_stepwise_similarity.py  probe_weight_similarity.py  run_eval.py  run_probes.py  run_training.py  training.py
sudoku/: activations.py  data.py  data_bt.py  default_experiments.py  evaluate.py  experiment_config.py  model.py  probes.py  solver.py  visualize.py
torch_backend/: evaluate.py  training.py  transformer.py
(+17 files in other folders)
