[project]
name = "sudoku-residual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.3",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "optax>=0.2",
    "orbax-checkpoint>=0.6",
    "tqdm>=4.66",
]
[project.optional-dependencies] 
tpu = ["jax[tpu]>=0.9.0.1", ] 
probes = [ "scikit-learn>=1.8.0",]